# ai-congress

./: .gitignore  Dockerfile  MIGRATION_GUIDE.md  OPEN_WEBUI_FEATURES.md  ORACLEDB_FIXES.md  RAG_AND_SEARCH_ENHANCEMENTS.md  README.md  RUN_THIS_FIRST.md  SEARXNG_SETUP.md  cli.py  docker-compose.searxng.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run_cli.py  run_server.py  start_searxng.sh  startup.sh
config/: hollywood_personalities.json  lobby_agents.json  mission.yaml  models_benchmark.json  models_personality.json  org_chart.yaml  personalities.json  triads.json  us_congress.json  youtubers.json
docs/: QUICK_START_UI.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
interactive/: next.config.ts  package-lock.json  package.json
perplexity_resources/: AI-Congress-README.md  Cline-Workspace-Guide.md  ai_congress_tasks.csv  (+12 more)
tui-rs/: Cargo.toml  capture_screenshot.py
tui-rs/.pi/suggester/logs/: events.ndjson
tui-rs/.pi/suggester/sessions/38b396e5-5314-4ee1-bfcc-6befbfae8e9b/: meta.json  usage.json
tui-rs/src/: app.rs  main.rs  session.rs  theme.rs  ui.rs  ws.rs
tui-rs/src/api/: mod.rs  rest.rs  ws_chat.rs  ws_simulation.rs
tui-rs/src/screens/: chat_dashboard.rs  mod.rs  mode_select.rs  models.rs  results.rs  simulation.rs  splash.rs
tui-rs/src/widgets/: agent_pane.rs  amendment_tracker.rs  feed.rs  help_overlay.rs  mod.rs  persuasion_graph.rs  progress_bar.rs  sparkline_widget.rs  vote_tracker.rs
tui-rs/tapes/: help.tape  mode-select.tape  models.tape  simulation.tape  splash.tape
(+211 files in other folders)
