[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-congress"
version = "0.1.0"
description = "Autonomous LLM multi-agent system with weighted ensemble decision-making"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (Oracle, Ollama)",
    "unit: marks pure unit tests",
]
